fixed broken css links and tidied up head for menu pages

--- a/2048theme.css
+++ b/2048theme.css
@@ -1,5 +1,6 @@
 body {
 	font-family: "Verdanna", sans-serif;
+	background:#FAF8EF;
 }
 .ui-page { 
     background:#FAF8EF;
